Add extension id to FF manifest

--- a/assets/manifest/manifest.firefox.json
+++ b/assets/manifest/manifest.firefox.json
@@ -24,5 +24,10 @@
             },
             "description": "Add tab as task"
         }
+    },
+    "browser_specific_settings": {
+        "gecko": {
+            "id": "todoist@oneclick"
+        }
     }
 }
