--- a/package.json
+++ b/package.json
@@ -4,14 +4,16 @@
     "version": "0.0.1",
     "type": "module",
     "scripts": {
-        "dev:chrome": "DEV_BROWSER=chrome rollup -c --watch",
-        "dev:firefox": "DEV_BROWSER=firefox rollup -c --watch",
-        "test": "vitest"
+        "dev:chrome": "npm run clear && DEV_BROWSER=chrome rollup -c --watch",
+        "dev:firefox": "npm run clear && DEV_BROWSER=firefox rollup -c --watch",
+        "test": "vitest",
+        "clear": "rimraf dist"
     },
     "devDependencies": {
         "@rollup/plugin-node-resolve": "15.2.3",
         "@rollup/plugin-typescript": "11.1.6",
         "@types/chrome": "0.0.263",
+        "rimraf": "5.0.5",
         "rollup": "4.13.0",
         "rollup-plugin-copy": "3.5.0",
         "tslib": "2.6.2",
