--- a/package.json
+++ b/package.json
@@ -1,13 +1,15 @@
 {
     "name": "todoist-one-click",
     "private": true,
-    "version": "0.0.1",
+    "version": "1.1.0",
     "type": "module",
     "scripts": {
         "dev:chrome": "npm run clear && DEV_BROWSER=chrome rollup -c --watch",
         "dev:firefox": "npm run clear && DEV_BROWSER=firefox rollup -c --watch",
         "test": "vitest",
-        "clear": "rimraf dist"
+        "clear": "rimraf dist",
+        "build:chrome": "npm run clear && DEV_BROWSER=chrome rollup -c",
+        "build:firefox": "npm run clear && DEV_BROWSER=firefox rollup -c"
     },
     "devDependencies": {
         "@rollup/plugin-node-resolve": "15.2.3",
