--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
     "scripts": {
         "dev:chrome": "npm run clear && DEV_BROWSER=chrome rollup -c --watch",
         "dev:firefox": "npm run clear && DEV_BROWSER=firefox rollup -c --watch",
-        "test": "vitest",
+        "test": "vitest tests/*",
+        "e2e": "npx playwright test",
+        "e2e:ui": "npx playwright test --ui",
         "clear": "rimraf dist",
         "build:chrome": "npm run clear && DEV_BROWSER=chrome rollup -c",
         "build:firefox": "npm run clear && DEV_BROWSER=firefox rollup -c"
