--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
     "name": "todoist-one-click",
     "private": true,
-    "version": "1.1.0",
+    "version": "1.1.1",
     "type": "module",
     "scripts": {
         "dev:chrome": "npm run clear && DEV_BROWSER=chrome rollup -c --watch",
@@ -14,6 +14,7 @@
         "build:firefox": "npm run clear && DEV_BROWSER=firefox rollup -c"
     },
     "devDependencies": {
+        "@playwright/test": "1.43.0",
         "@rollup/plugin-node-resolve": "15.2.3",
         "@rollup/plugin-typescript": "11.1.6",
         "@types/chrome": "0.0.263",
