--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,6 +2,7 @@
 {
     "compilerOptions": {
         "target": "es6",
+        "lib": ["es6", "dom", "ES2022.Error"],
         "module": "esnext",
         "emitDecoratorMetadata": true,
         "experimentalDecorators": true,
