--- a/package.json
+++ b/package.json
@@ -18,9 +18,11 @@
         "build:all": "npm run clear && DEV_BROWSER=chrome rollup -c && DEV_BROWSER=firefox rollup -c",
         "release:minor": "npm run test:all && npm version minor -m 'Release minor v%s' && npm run build:all",
         "release:patch": "npm run test:all && npm version patch -m 'Release patch v%s' && npm run build:all",
-        "knip": "knip"
+        "knip": "knip",
+        "lint": "npx @biomejs/biome check ."
     },
     "devDependencies": {
+        "@biomejs/biome": "1.7.1",
         "@playwright/test": "1.43.0",
         "@rollup/plugin-node-resolve": "15.2.3",
         "@rollup/plugin-typescript": "11.1.6",
@@ -31,6 +33,7 @@
         "rimraf": "5.0.5",
         "rollup": "4.13.0",
         "rollup-plugin-copy": "3.5.0",
+        "ts-lit-plugin": "2.0.2",
         "tslib": "2.6.2",
         "typescript": "5.4.5",
         "vitest": "1.4.0"
