Minor lint updates

--- a/biome.json
+++ b/biome.json
@@ -17,7 +17,7 @@
                 "noUnusedImports": "warn"
             },
             "suspicious": {
-                "noExplicitAny": "off"
+                "noExplicitAny": "warn"
             }
         }
     },
