Do not package on dev rollup

--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
     "version": "1.2.2",
     "type": "module",
     "scripts": {
-        "dev:chrome": "npm run clear && DEV_BROWSER=chrome rollup -c --watch",
-        "dev:firefox": "npm run clear && DEV_BROWSER=firefox rollup -c --watch",
+        "dev:chrome": "npm run clear && rollup -c --watch --environment DEV_BROWSER:chrome,BUILD:development",
+        "dev:firefox": "npm run clear && rollup -c --watch --environment DEV_BROWSER:firefox,BUILD:development",
         "test": "vitest run --exclude ./e2e",
         "test:watch": "vitest --exclude ./e2e",
         "e2e": "npm run build:chrome && npx playwright test -c ./e2e",
@@ -13,9 +13,9 @@
         "test:all": "npm run test && npm run e2e && npm run clear:all",
         "clear": "rimraf dist",
         "clear:all": "rimraf dist && rimraf packages",
-        "build:chrome": "npm run clear && DEV_BROWSER=chrome rollup -c",
-        "build:firefox": "npm run clear && DEV_BROWSER=firefox rollup -c",
-        "build:all": "npm run clear && DEV_BROWSER=chrome rollup -c && DEV_BROWSER=firefox rollup -c",
+        "build:chrome": "npm run clear && rollup -c --environment DEV_BROWSER:chrome",
+        "build:firefox": "npm run clear && rollup -c --environment DEV_BROWSER:firefox",
+        "build:all": "npm run clear:all && DEV_BROWSER=chrome rollup -c --environment DEV_BROWSER:chrome && rollup -c --environment DEV_BROWSER:firefox",
         "release:minor": "npm run test:all && npm version minor -m 'Release minor v%s' && npm run build:all",
         "release:patch": "npm run test:all && npm version patch -m 'Release patch v%s' && npm run build:all",
         "knip": "knip",
