--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
         "build:chrome": "npm run clear && rollup -c --environment DEV_BROWSER:chrome",
         "build:firefox": "npm run clear && rollup -c --environment DEV_BROWSER:firefox",
         "build:all": "npm run clear:all && DEV_BROWSER=chrome rollup -c --environment DEV_BROWSER:chrome && rollup -c --environment DEV_BROWSER:firefox",
+        "release:major": "npm run test:all && npm version major -m 'Release major v%s' && npm run build:all",
         "release:minor": "npm run test:all && npm version minor -m 'Release minor v%s' && npm run build:all",
         "release:patch": "npm run test:all && npm version patch -m 'Release patch v%s' && npm run build:all",
         "knip": "knip",
