--- a/biome.json
+++ b/biome.json
@@ -3,7 +3,16 @@
     "assist": {
         "actions": {
             "source": {
-                "organizeImports": "on"
+                "organizeImports": {
+                    "level": "on",
+                    "options": {
+                        "groups": [
+                            {
+                                "type": false
+                            }
+                        ]
+                    }
+                }
             }
         }
     },
