Updates based on biome suggestions

--- a/biome.json
+++ b/biome.json
@@ -1,5 +1,13 @@
 {
     "$schema": "./node_modules/@biomejs/biome/configuration_schema.json",
+    "files": {
+        "includes": [
+            "**",
+            "!**/dist",
+            "!**/e2e/test-results",
+            "!**/e2e/html-report"
+        ]
+    },
     "assist": {
         "actions": {
             "source": {
