--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     },
     "devDependencies": {
         "@biomejs/biome": "2.2.7",
+        "@lit/localize-tools": "0.8.0",
         "@playwright/test": "1.56.1",
         "@rollup/plugin-node-resolve": "16.0.1",
         "@rollup/plugin-typescript": "12.1.2",
@@ -40,6 +41,7 @@
         "vitest": "4.0.1"
     },
     "dependencies": {
+        "@lit/localize": "0.12.2",
         "lit": "3.3.0"
     }
 }
